first lostrat successful build